--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cookie-session": "^1.3.2",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "method-override": "^2.3.10",
     "mongodb": "^2.2.33",
